--- a/SHSA3G04.Rnw
+++ b/SHSA3G04.Rnw
@@ -204,18 +204,18 @@ using a statistical table for the distribution of interest). Show all your deriv
 
     To compute the $p$-value we need to define a random variable related to the measure of distance defined in the equation \eqref{eq:prevalence} and characterize its probability function. Consequently, we define $X$ = "Number of workers with acceptable levels of pollutant in a random sample of size n = 20 from the workers population", so that, 
     \begin{equation}
-        X \sim \text{Binomial}(n, \pi) \quad \text{and} \quad P(X = k) = {n \choose k } \pi^k · (1 - \pi)^{n-k}, \quad k = 0, ..., n,
+        X \sim \text{Binomial}(n, \pi) \quad \text{and} \quad P(X = k) = {n \choose k } \pi^k \cdot (1 - \pi)^{n-k}, \quad k = 0, ..., n,
     \end{equation}
     where $n = 20$ and $\pi$ is the unknown prevalence of workers that have acceptable levels of pollutant.
     
     However, we know that, under $\text{H}_0$, $\pi = 0.95$, so,
     \begin{equation}
-        P(X = k) = {10 \choose k } 0.4^k · 0.6^{10-k}.
+        P(X = k) = {10 \choose k } 0.4^k \cdot 0.6^{10-k}.
     \end{equation}
 
     And, also that,
     \begin{equation}
-        E(X|\text{H}_0) = n·(\pi|\text{H}_0) = 20·0.95 = 19
+        E(X|\text{H}_0) = n·(\pi|\text{H}_0) = 20 \cdot 0.95 = 19
     \end{equation}
     that is to say, we would expect 19 workers that have acceptable levels of pollutant in a random sample of size 20 while we indeed have observed 20 workers that have acceptable levels of pollutant.
 
