--- a/SHSA3G04.Rnw
+++ b/SHSA3G04.Rnw
@@ -164,33 +164,57 @@ are interested in know if the percentage of workers with acceptable levels of th
 is still the same (i.e. $95\%$). To decide, we randomly select a sample of 20 workers resulting
 in the data stored in the file \Robject{factory.RData}.
 
+<<data>>=
+    
+### loading data and obtaining the necessary information
+load('factory.RData')
+
+# Number of workers in the sample randomly selected
+n = length(factory$worker)
+
+# Number of workers that have acceptable levels of pollutant
+k = length(factory$worker[factory$X<2.95])
+
+# Percentage of workers that have acceptable levels of pollutant in previous studies
+P = 0.95  
+
+# Significance level
+alpha = 0.05
+
+@
+
 \begin{enumerate}
   \item State clearly the hypothesis test.
   \begin{itemize}
     \item \textbf{Step 1.} State the hypothesis test and set the significance level.\\
     Define $H_{0}$ and $H_{1}$:
     \begin{equation}
-        \begin{cases} \text{$H_{0}$:} & \mbox{The prevalence of workers that have acceptable levels of pollutant is 0.95} \\ \text{$H_{1}$:} & \mbox{The prevalence of workers that have acceptable levels of pollutant is not 0.95} \end{cases}\\
+        \begin{cases} \text{$H_{0}$:} & \mbox{The prevalence of workers that have acceptable levels of pollutant is \Sexpr{P}} \\ \text{$H_{1}$:} & \mbox{The prevalence of workers that have acceptable levels of pollutant is not \Sexpr{P}} \end{cases}\\
 \end{equation}
     We are going to translate the hypothesis statement into mathematical language:
     \begin{equation}
-        \begin{cases} \text{$H_{0}$:} & \mbox{$P(E) = 0.95$} \\ \text{$H_{1}$:} & \mbox{$P(E) \not= 0.95$} \end{cases}\\
+        \begin{cases} \text{$H_{0}$:} & \mbox{$P(E) = \Sexpr{P}$} \\ \text{$H_{1}$:} & \mbox{$P(E) \not= \Sexpr{P}$} \end{cases}\\
     \end{equation}
-    We set the significance level, for instance, as usual, $\alpha$ = 0.05.
+    We set the significance level, for instance, as usual, $\alpha$ = \Sexpr{alpha}.
     \item \textbf{Step 2.} Carry out the experiment and obtain the data.\\
-    In the sample of size $n = 20$, the number of workers that have acceptable levels of pollutant is $k = 20$.
+    In the sample of size $n = \Sexpr{n}$, the number of workers that have acceptable levels of pollutant is $k = \Sexpr{k}$.
     \item \textbf{Step 3.} Compute and interpret a measure of distance related to the hypothesis to be contrasted.\\
     Prevalence of workers that have acceptable levels of pollutant can be estimated as:
+    
+<<prevelance_estimation>>=
+
+# Prevalence estimation
+P_e = k/n
+@
+    
     \begin{equation}
     \label{eq:prevalence}
-      \widehat{P(E)} = \frac{k}{n} = \frac{20}{20} = 1
+      \widehat{P(E)} = \frac{k}{n} = \frac{\Sexpr{k}}{\Sexpr{n}} = \Sexpr{P_e}
     \end{equation}
   \end{itemize}
   \item Compute the $p$-value based on the exact distribution of the data under the null hypothesis, using each of the following methods:
   \begin{enumerate}
-    \item  By hand (i.e. obtaining the mathematical expression for the $p$-value and then
-computing its numerical value using \textsf{R} as a simple calculator). Show all your
-derivations and your \textsf{R} code.
+    \item  By hand (i.e. obtaining the mathematical expression for the $p$-value and then computing its numerical value using \textsf{R} as a simple calculator). Show all your derivations and your \textsf{R} code.
     \item Using the probability distributions in \textsf{R} (i.e. implementing the calculation of
 the $p$-value in an \textsf{R} script, using the proper existing probability function \footnote{\url{
 https://cran.r-project.org/web/views/Distributions.html}}).
@@ -201,39 +225,68 @@ under the null hypothesis, using each of the following methods:
   \begin{enumerate}
     \item By hand (i.e. obtaining the mathematical expression for the $p$-value and then
 using a statistical table for the distribution of interest). Show all your derivations and your \textsf{R} code.
-
-    To compute the $p$-value we need to define a random variable related to the measure of distance defined in the equation \eqref{eq:prevalence} and characterize its probability function. Consequently, we define $X$ = "Number of workers with acceptable levels of pollutant in a random sample of size n = 20 from the workers population", so that, 
+  
+    To compute the $p$-value we need to define a random variable related to the measure of distance defined in the equation \eqref{eq:prevalence} and characterize its probability function. Consequently, we define $X$ = "Number of workers with acceptable levels of pollutant in a random sample of size n = \Sexpr{n} from the workers population", so that, 
     \begin{equation}
         X \sim \text{Binomial}(n, \pi) \quad \text{and} \quad P(X = k) = {n \choose k } \pi^k \cdot (1 - \pi)^{n-k}, \quad k = 0, ..., n,
     \end{equation}
-    where $n = 20$ and $\pi$ is the unknown prevalence of workers that have acceptable levels of pollutant.
+    where $n = \Sexpr{n}$ and $\pi$ is the unknown prevalence of workers that have acceptable levels of pollutant.
     
-    However, we know that, under $\text{H}_0$, $\pi = 0.95$, so,
+    However, we know that, under $\text{H}_0$, $\pi = \Sexpr{P}$, so,
     \begin{equation}
-        P(X = k) = {10 \choose k } 0.4^k \cdot 0.6^{10-k}.
+        P(X = k) = {\Sexpr{n} \choose k } \Sexpr{P}^k \cdot \Sexpr{1-P}^{\Sexpr{n}-k}.
     \end{equation}
 
     And, also that,
-    \begin{equation}
-        E(X|\text{H}_0) = n·(\pi|\text{H}_0) = 20 \cdot 0.95 = 19
-    \end{equation}
-    that is to say, we would expect 19 workers that have acceptable levels of pollutant in a random sample of size 20 while we indeed have observed 20 workers that have acceptable levels of pollutant.
+<<Expect_workers>>=
 
-    Therefore, results at least as favorable to $\text{H}_1$ than those observed are $|X - X_e| \geq |X_o - X_e| = |20 - 19| = 1$, where $X_o$ and $X_e$ are the observed value in the experiment and the expected value under $\text{H}_0$, respectively, and the $p$-value under asymptotic approximation using the normal distribution is:
+# Number of expected workers that have acceptable levels of pollutant 
+E = n * P
+@
+    \begin{equation}
+        E(X|\text{H}_0) = n \cdot (\pi|\text{H}_0) = \Sexpr{n} \cdot \Sexpr{P} = \Sexpr{E}
+    \end{equation}
+    that is to say, we would expect \Sexpr{E} workers that have acceptable levels of pollutant in a random sample of size \Sexpr{n} while we indeed have observed \Sexpr{k} workers that have acceptable levels of pollutant.
+<<results>>=
+
+# Distance between the results observed and expected
+D = k - E
+@
+    Therefore, results at least as favorable to $\text{H}_1$ than those observed are $|X - X_e| \geq |X_o - X_e| = |\Sexpr{k} - \Sexpr{E}| = \Sexpr{D}$, where $X_o$ and $X_e$ are the observed value in the experiment and the expected value under $\text{H}_0$, respectively, and the $p$-value under asymptotic approximation using the normal distribution is:
     \begin{equation}
         X \sim \text{Binomial}(n,\pi) \quad \xRightarrow{\text{asympt.}} \quad \frac{X - n\pi}{\sqrt{n\pi (1 - \pi)}} = Z \sim \mathcal{N}(\mu = 0, \sigma = 1)
     \end{equation}
     and applying a continuity correction, so that
+<<Normal_calculations>>=
+
+# Continuity corrections
+sup = E + D - 0.5
+inf = E - D + 0.5
+
+# Mu and sigma^2 calculations
+mu = n * P
+sd = k*P*(1-P)
+
+# Normal approximation
+Z_sup = (sup - mu)/sqrt(sd)
+Z_inf = (inf - mu)/sqrt(sd)
+
+# p-value
+
+p_value = 2*(1-0.69497)
+@
     \begin{equation}
         \begin{array}{lcllll}
-            p\text{-value} & = & P({X \geq 20} \cup {X \leq 18}|\text{H}_0) &\\
-            & = & P({X \geq 20} \cup {X \leq 18}| X \sim \text{Binomial}(20,0.95)) &\\
-            & \approx & P({X \geq 19.5} \cup {X \leq 18.5}| X \sim \mathcal{N}(\mu = 19, \sigma^2 = 0.95)) &\\
-            & = & P({z \geq \frac{\sqrt{95}}{19}} \cup {z \leq -\frac{\sqrt{95}}{19}}) &\\
-            & = & 2 \phi \left( -\frac{\sqrt{95}}{19} \right) \approx 2·(1-0.69497) = 0.61 
+            p\text{-value} & = & P({X \geq \Sexpr{E + D}} \cup {X \leq \Sexpr{E - D}}|\text{H}_0) &\\
+            & = & P({X \geq \Sexpr{E + D}} \cup {X \leq \Sexpr{E - D}}| X \sim \text{Binomial}(\Sexpr{n},\Sexpr{P})) &\\
+            & \approx & P({X \geq \Sexpr{sup}} \cup {X \leq \Sexpr{inf}}| X \sim \mathcal{N}(\mu = \Sexpr{mu}, \sigma^2 = \Sexpr{sd})) &\\
+            & = & P({z \geq \Sexpr{Z_sup}} \cup {z \leq \Sexpr{Z_inf}}) &\\
+            & = & 2 \cdot \phi \left( \Sexpr{Z_inf} \right) \approx 2·(1-0.69497) = \Sexpr{p_value}
         \end{array}
     \end{equation}
-    Hence, since the $p$-value (0.61) is higher than $\alpha$ (0.05), we decide we have not evidence strong enough to reject the null hypothesis under which the prevalence of workers that have acceptable levels of pollutant is 0.95.
+    Hence, since the $p$-value (\Sexpr{p_value}) is higher than $\alpha$ (\Sexpr{alpha}), we decide we have not evidence strong enough to reject the null hypothesis under which the prevalence of workers that have acceptable levels of pollutant is \Sexpr{P}.
+    
+    
     \item Using the probability distributions in \textsf{R} (i.e. implementing the calculation of
 the $p$-value in an \textsf{R} script, using the proper existing probability function). Show
 your \textsf{R} script and the output.
